#81 исправить update у user, habit, list_listhttps://github.com/AlibabaRazboinik/habit_tracker/issues/81 минимальный рабочий update перепишу по-нормальному в тело json
