# src/main/resources/api.yaml
@@ -135,16 +135,43 @@ paths:
 
   /habit_list/get_habitList:
     get:
-      description: Получить список привычек для авторизованного пользователя
-      summary: Получить список привычек
+      description: Получить лист привычек для авторизованного пользователя
+      summary: Получить лист привычек
       operationId: getHabitList
       responses:
         200:
-          description: Список привычек
+          description: Лист привычек
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/HabitListDTO'
+
+  /habit_list/update_habitList/{name}:
+    put:
+      description: Обновить лист привычек для авторизованного по имени
+      summary: Обновить лист привычек по имени
+      operationId: updateHabitList
+      parameters:
+        - in: path
+          name: name
+          description: временно имя прокидываем
+          required: true
+          schema:
+            type: string
+#      requestBody:
+#        description: Новые данные для привычки
+#        required: true
+#        content:
+#          application/json:
+#            schema:
+#              $ref: '#/components/schemas/NameDTO'
+      responses:
+        200:
+          description: Лист привычек обновился
+        403:
+          description: Залогиненный пользователь был удален или никто не залогинился
+        500:
+          description: Проверь, что имя указано
 
   /user/get_user/{username}:
     get:
@@ -299,6 +326,23 @@ components:
             - "@PositiveOrZero"
       required:
         - id
+
+#    NameDTO:
+#      description: Строка с именем объекта
+#      type: object
+#      properties:
+#        name:
+#          description: Название объекта
+#          type: string
+#          x-constraints:
+#            - "@AtLeastOneLetter(message = \"This name must contains at least one character\")"
+#            - "@OnlyLettersDigitsUnderscore(message = \"Field can contains only letters, digits or underscore\")"
+#            - "@NotNull(message = \"name should not be null\")"
+#            - "@NotBlank"
+#            - "@Size(min = 3, message = \"Too short name\")"
+#            - "@Size(max = 20, message = \"Too long name\")"
+#      required:
+#        -name
 
     UserDTO:
       description: Описание пользователя
